# jsonschema_jsquery

./: .gitignore  Dockerfile  README.rst  pyproject.toml
sct_jschema/: cli.py
tests/: conftest.py  test_schema.json  test_sct_jschema.py
