[tool.poetry]
name = "sct_jschema"
version = "0.1.0"
description = ""
authors = ["Jason DeCorte <jdecorte@decorteindustries.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pre-commit = "^1.21"

[tool.poetry.scripts]
jsquery = 'sct_jschema.cli:main'

[tool.black]
target_version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.idea
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
